banner section closed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section>
+            <div class="banner-container">
+                <div class="banner-text">
+                    <h1 class="title">Better design for <br />
+                        your digital products</h1>
+                        <p class="description">We are a creative studio specializing in UI/UX <br>design, development
+                            and strategy.</p>
+                            <button class="btn">Explore more</button>
+                </div>
+                <div class="banner-img">
+                    <img class="photo" src="IMG/banner.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
 </html>
