about section closed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+   
     <header>
+         <!--this is header section-->
         <nav>
             <div class="main-container">
                 <div class="logo">
@@ -25,6 +27,7 @@
         </nav>
     </header>
     <main>
+        <!--this is banner section-->
         <section>
             <div class="banner-container">
                 <div class="banner-text">
@@ -38,6 +41,23 @@
                     <img class="photo" src="IMG/banner.png" alt="">
                 </div>
             </div>
+        </section>
+        <section>
+            <h1 class="head">About Us</h1>
+            <div class="about-container">
+                 <div class="about-img">
+                    <img class="about-photo" src="IMG/section.png" alt="">
+                 </div> 
+                 <div class="about-text">
+                    <h1 class="title">We grow brands through <br> blood &strstratagic creative</h1>
+                    <p class="des">Lorem ipsum dolor, sit amet consectetur
+                      <br>   adipisicing.</p>
+                    <p class="des">Lorem, ipsum dolor sit amet consectetur <br>adipisicing.</p>
+                    <button class="btn tp">contact with us</button>
+                 </div>
+                 
+            </div>
+            
         </section>
     </main>
     <footer></footer>
